electron and vue added

--- a/package.json
+++ b/package.json
@@ -1,20 +1,64 @@
 {
   "name": "simbac",
   "version": "0.0.1",
+  "private": true,
   "description": "",
-  "main": "src/index.js",
+  "author": {
+    "name": "Andreas",
+    "email": "admin@andreas-vogt.ch",
+    "url": "https://shokodev.ch/"
+  },
   "scripts": {
-    "start": "electron .",
-    "dev": "nodemon src/index.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "dev": "nodemon src/index.js",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps",
+    "start": "electron ."
   },
-  "keywords": [],
-  "author": "Andreas <admin@andreas-vogt.ch> (https://shokodev.ch/)",
-  "license": "MIT",
-  "devDependencies": {
-    "electron": "^13.1.8",
-    "nodemon": "^2.0.12"
-  },
+  "main": "background.js",
   "dependencies": {
-    "bacstack": "^0.0.1-beta.14"
-  }
+    "bacstack": "^0.0.1-beta.14",
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "electron": "^13.1.8",
+    "electron-devtools-installer": "^3.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "nodemon": "^2.0.12",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "_id": "simbac@0.0.1",
+  "keywords": [],
+  "license": "MIT",
+  "readme": "ERROR: No README data found!"
 }
