--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bacstack": "^0.0.1-beta.14",
     "core-js": "^3.6.5",
+    "electron-store": "^8.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
