--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "start": "electron ."
+    "start": "electron .",
+    "test": "jest"
   },
   "main": "background.js",
   "dependencies": {
@@ -41,6 +42,7 @@
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.12",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
